--- a/event/event_sub/event_20160320_jps.html
+++ b/event/event_sub/event_20160320_jps.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+ï»¿<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html xml:lang="ja" lang="ja">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html@charset=Shift_JIS">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<meta name="ROBOTS" content="ALL">
@@ -17,7 +17,7 @@
 <div id="base_box">
 
 	<div id="top_box">
-		<center><img src="../../image/ymap_logo.png" width="245" height="88" alt="‰F’ˆ‘f—±ŽqŽáŽè‚Ì‰ï/Youth Meeting for AstroParticle : YMAP"></center>
+		<center><img src="http://www.icrr.u-tokyo.ac.jp/YMAP/image/YMAP_logo.png" width="245" height="88" alt="å®‡å®™ç´ ç²’å­è‹¥æ‰‹ã®ä¼š/Youth Meeting for AstroParticle : YMAP"></center>
 		<hr size="1" width="90%" color="#000088">
 		<center>
 			<a href="../../index.html">Home</a> |
@@ -31,42 +31,42 @@
 
 	<div id="main_box" style="padding-left:1em">
 
-		<h2>ƒCƒxƒ“ƒgÚ×</h2>
+		<h2>ã‚¤ãƒ™ãƒ³ãƒˆè©³ç´°</h2>
 			<dl style="padding-left:1em">
-				<dt>ƒCƒxƒ“ƒg–¼Ì</dt>
-					<dd>‰F’ˆ‘f—±ŽqŽáŽè‚Ì‰ïƒCƒ“ƒtƒH[ƒ}ƒ‹ƒ~[ƒeƒBƒ“ƒO</dd>
-					<dd>i“ú–{•¨—Šw‰ï ‘æ71‰ñ”NŽŸ‘å‰ïi2016”Nj“àj</dd>
+				<dt>ã‚¤ãƒ™ãƒ³ãƒˆåç§°</dt>
+					<dd>å®‡å®™ç´ ç²’å­è‹¥æ‰‹ã®ä¼šã‚¤ãƒ³ãƒ•ã‚©ãƒ¼ãƒžãƒ«ãƒŸãƒ¼ãƒ†ã‚£ãƒ³ã‚°</dd>
+					<dd>ï¼ˆæ—¥æœ¬ç‰©ç†å­¦ä¼š ç¬¬71å›žå¹´æ¬¡å¤§ä¼šï¼ˆ2016å¹´ï¼‰å†…ï¼‰</dd>
 					<dd>&nbsp;</dd>
-				<dt>ŠJÃ“úŽž</dt>
-					<dd>2016”N3ŒŽ20“úi“új</dd>
+				<dt>é–‹å‚¬æ—¥æ™‚</dt>
+					<dd>2016å¹´3æœˆ20æ—¥ï¼ˆæ—¥ï¼‰</dd>
 					<dd>17:30 - 19:30</dd>
 					<dd>&nbsp;</dd>
-				<dt>ŠJÃêŠ</dt>
-					<dd>“Œ–kŠw‰@‘åŠw òƒLƒƒƒ“ƒpƒX “ú–{•¨—Šw‰ï AT‰ïê</dd>
+				<dt>é–‹å‚¬å ´æ‰€</dt>
+					<dd>æ±åŒ—å­¦é™¢å¤§å­¦ æ³‰ã‚­ãƒ£ãƒ³ãƒ‘ã‚¹ æ—¥æœ¬ç‰©ç†å­¦ä¼š ATä¼šå ´</dd>
 					<dd>&nbsp;</dd>
-				<dt>‹c‘è</dt>
+				<dt>è­°é¡Œ</dt>
 					<dd>
 						<ul>
-						<li>‰F’ˆ‘f—±ŽqŽáŽè‚Ì‰ï‚ÉŠÖ‚·‚éà–¾EŒ»ó‚Ì‚²•ñ</li>
-						<li>‰ïŽåÃ‚ÌŒ¤‹†‰ï‚È‚Ç¡Œã‚ÌŠˆ“®‚É‚Â‚¢‚Ä‚Ì‹c˜_</li>
-						<li>‹K–ñ‚ÌÌ‘ð‚ÆA‰ï”­‘«‚É”º‚¤Ý—§ƒƒ“ƒo[‚Ì•åW</li>
-						<li>2016”N“x–ðˆõ‚Ì‘Io</li>
+						<li>å®‡å®™ç´ ç²’å­è‹¥æ‰‹ã®ä¼šã«é–¢ã™ã‚‹èª¬æ˜Žãƒ»ç¾çŠ¶ã®ã”å ±å‘Š</li>
+						<li>ä¼šä¸»å‚¬ã®ç ”ç©¶ä¼šãªã©ä»Šå¾Œã®æ´»å‹•ã«ã¤ã„ã¦ã®è­°è«–</li>
+						<li>è¦ç´„ã®æŽ¡æŠžã¨ã€ä¼šç™ºè¶³ã«ä¼´ã†è¨­ç«‹ãƒ¡ãƒ³ãƒãƒ¼ã®å‹Ÿé›†</li>
+						<li>2016å¹´åº¦å½¹å“¡ã®é¸å‡º</li>
 						</ul>
 					</dd>
 					<dd>&nbsp;</dd>
-				<dt>‚»‚Ì‘¼</dt>
-					<dd>Ž¯•Ê@F@‘fEŠjE‰Fƒr[ƒ€ŠÖ˜A</dd>
-					<dd>ŠÖ˜A—Ìˆæ–¼@F@‰F’ˆüE‰F’ˆ•¨——Ìˆæ</dd>
+				<dt>ãã®ä»–</dt>
+					<dd>è­˜åˆ¥ã€€ï¼šã€€ç´ ãƒ»æ ¸ãƒ»å®‡ãƒ“ãƒ¼ãƒ é–¢é€£</dd>
+					<dd>é–¢é€£é ˜åŸŸåã€€ï¼šã€€å®‡å®™ç·šãƒ»å®‡å®™ç‰©ç†é ˜åŸŸ</dd>
 					<dd>&nbsp;</dd>
 			</dl>
-		<p style="padding-left:1em">‚²•s–¾‚È“_‚ª—L‚è‚Ü‚µ‚½‚çAL•ñ’S“–‚Ü‚Å‚²˜A—‚­‚¾‚³‚¢B</p>
+		<p style="padding-left:1em">ã”ä¸æ˜Žãªç‚¹ãŒæœ‰ã‚Šã¾ã—ãŸã‚‰ã€åºƒå ±æ‹…å½“ã¾ã§ã”é€£çµ¡ãã ã•ã„ã€‚</p>
 
 	</div>
 
 	<div id="end_box">
 
 	<hr size="1" width="90%" color="#000088">
-	<center><p>Copyright (C) ‰F’ˆ‘f—±ŽqŽáŽè‚Ì‰ï/Youth Meeting for AstroParticle:YMAP All Rights Reserved.</p></center>
+	<center><p>Copyright (C) å®‡å®™ç´ ç²’å­è‹¥æ‰‹ã®ä¼š/Youth Meeting for AstroParticle:YMAP All Rights Reserved.</p></center>
 
 	</div>
 
