ROOT講習会2017の参加登録フォームを追加
その他更新が遅れている部分があるがとりあえずここだけ

--- a/index.html
+++ b/index.html
@@ -33,13 +33,20 @@
 
     <h2>NEWS</h2>
     <dl style="padding-left:1em">
+
       <dt>入会窓口について</dt>
       <dd>入会については<a href="about/about.html">About</a>ページをご覧ください。</dd>
 
-      <dd>&nbsp;</dd>
-      <dt>2016/09/12 ～</dt>
-        <dd></dd>第1回 宇宙素粒子若手の会 秋の研究会(2016年度) の参加登録受付を研究会ページにて始めました。
-<dd><a href="event/event_sub/conf2016/index.html">研究会ホームページ</a></dd>
+	  <dd>&nbsp;</dd>
+	  <dt>2017/04/17 ～</dt>
+        <dd></dd>2017年度のROOT講習会の参加登録をはじめました.
+		<dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSdPQ0LoQqrF6YWyQ_hNCLcryYB-ZpsvhIkJ4Xr0UZBY5G1Fzw/viewform?usp=sf_link">登録フォーム</a></dd>
+
+	  <dd>&nbsp;</dd>
+	  <dt>2016/09/12 ～</dt>
+        <dd></dd>第1回 宇宙素粒子若手の会 秋の研究会(2016年度) を開催いたしました。
+		<dd><a href="event/event_sub/conf2016/index.html">研究会ホームページ</a></dd>
+
   <dd>&nbsp;</dd>
 
   <dt>2016/09/07</dt>
