イベントページにROOT2017を載せた
ついでに終了イベントを過去のイベントに移動

--- a/event/event.html
+++ b/event/event.html
@@ -37,16 +37,23 @@
 
     <h3>開催予定イベント</h3>
     <dl style="padding-left:1em">
-      <dt>＝2016/10/29 ～ 2016/10/31＝</dt>
-      <dd>第1回 宇宙素粒子若手の会 秋の研究会(2016年度)</dd>
-      <dd>・同年代の若手研究者と宇宙線分野全体にわたる様々な研究について議論し、交流を深める機会として、宇宙線分野全体をカバーする学生・若手研究者による研究会を開催いたします。</dd>
-      <dd><a href="event_sub/event_20161029.html">イベント詳細ページ</a></dd>
-      <dd>&nbsp;</dd>
-      <dd><a href="event_sub/conf2016/index.html">研究会ホームページ</a></dd>
-      <dd>&nbsp;</dd>
+    <dt>＝2017/04 ～ 2016/06＝</dt>
+      <dd>第2回ROOT講習会(2017年度)</dd>
+      <dd>・昨年度好評だったROOT講習会を本年度も開催いたします。</dd>
+      <dd>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPQ0LoQqrF6YWyQ_hNCLcryYB-ZpsvhIkJ4Xr0UZBY5G1Fzw/viewform?usp=sf_link">参加登録フォーム </a>
+      </dd>
+      <dt>&nbsp;</dt>
       </dl>
 
     <h3>過去のイベント</h3>
+    <dl style="padding-left:1em">
+      <dt>＝2016/10/29 ～ 2016/10/31＝</dt>
+      <dd>第1回 宇宙素粒子若手の会 秋の研究会(2016年度)</dd>
+      <dd>・同年代の若手研究者と宇宙線分野全体にわたる様々な研究について議論し、交流を深める機会として、宇宙線分野全体をカバーする学生・若手研究者による研究会を開催いたします。</dd>
+      <dd><a href="event_sub/event_20161029.html">イベント詳細ページ </a><a href="event_sub/conf2016/index.html">研究会ホームページ</a></dd>
+      
+    </dl>
     <dl style="padding-left:1em">
       <dt>＝2016/09/22＝</dt>
       <dd>2016年度 日本物理学会秋季年会にて</dd>
